{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 13,
  "lineage": "7dd98f1d-1ecb-dbad-8c99-50bfafe98e77",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533030558950:vpc/vpc-76f17913",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-28ed0341",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-c12cc0a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-76f17913",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e7c4a582",
            "owner_id": "533030558950",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:loadbalancer/app/webservers-stage/09941fb71182c8b2",
            "arn_suffix": "app/webservers-stage/09941fb71182c8b2",
            "dns_name": "webservers-stage-1584440376.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:loadbalancer/app/webservers-stage/09941fb71182c8b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webservers-stage",
            "security_groups": [
              "sg-0bd6e277f03f8bf83"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-e0054185"
              },
              {
                "subnet_id": "subnet-f779feae"
              },
              {
                "subnet_id": "subnet-fcc6ab8b"
              }
            ],
            "subnets": [
              "subnet-e0054185",
              "subnet-f779feae",
              "subnet-fcc6ab8b"
            ],
            "vpc_id": "vpc-76f17913",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:listener/app/webservers-stage/09941fb71182c8b2/8b2ff2b6e42caef8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:listener/app/webservers-stage/09941fb71182c8b2/8b2ff2b6e42caef8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:loadbalancer/app/webservers-stage/09941fb71182c8b2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:targetgroup/webservers-stage/a92254a2a92709b7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:listener-rule/app/webservers-stage/09941fb71182c8b2/8b2ff2b6e42caef8/184b0238e4c5529b",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:listener-rule/app/webservers-stage/09941fb71182c8b2/8b2ff2b6e42caef8/184b0238e4c5529b",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:listener/app/webservers-stage/09941fb71182c8b2/8b2ff2b6e42caef8",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.asg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:targetgroup/webservers-stage/a92254a2a92709b7",
            "arn_suffix": "targetgroup/webservers-stage/a92254a2a92709b7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:533030558950:targetgroup/webservers-stage/a92254a2a92709b7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "webservers-stage",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-76f17913"
          },
          "depends_on": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533030558950:security-group/sg-0bd6e277f03f8bf83",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd6e277f03f8bf83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 12345,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 12345
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webservers-stage-alb",
            "name_prefix": null,
            "owner_id": "533030558950",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-76f17913"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:533030558950:security-group/sg-067ce7b04ac43af6c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-067ce7b04ac43af6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "webservers-stage-instance",
            "name_prefix": null,
            "owner_id": "533030558950",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-76f17913"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-211338925",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bd6e277f03f8bf83",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1367565816",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd6e277f03f8bf83",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-1338047805",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-067ce7b04ac43af6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_testing_inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 12345,
            "id": "sgrule-983545712",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bd6e277f03f8bf83",
            "self": false,
            "source_security_group_id": null,
            "to_port": 12345,
            "type": "ingress"
          },
          "depends_on": [
            "module.webserver_cluster"
          ]
        }
      ]
    }
  ]
}